--- a/slim/home.slim
+++ b/slim/home.slim
@@ -135,6 +135,7 @@ html
         .home-arguments-decoration-circle-3
           .home-arguments-decoration-star-4
           .home-arguments-decoration-star-5
+          .home-arguments-decoration-star-6
 
     section.home-bank-logo
       .home-bank-logo-arrow
@@ -155,39 +156,36 @@ html
             .p-app-logo.icon-wp-p-logo
 
           .home-bank-logo-illustration-container
-            .bank-logo-row
-              .bank-logo-grid-1
-                .bank-logo-medium
-                  img src="img/bank-logos/credit-foncier.png"
-              .bank-logo-grid-2
-                .bank-logo-large
-                  img src="img/bank-logos/bred.png"
-            .bank-logo-row
-              .bank-logo-grid-3
-                .bank-logo-medium
-                  img src="img/bank-logos/bred-espace.png"
-              .bank-logo-grid-4
-                .bank-logo-large
-                  img src="img/bank-logos/ca-2.png"
-              .bank-logo-grid-5
-                .bank-logo-medium
-                  img src="img/bank-logos/lcl.png"
-              .bank-logo-grid-6
-                .bank-logo-large
-                  img src="img/bank-logos/caisse-epargne.png"
-            .bank-logo-row
-              .bank-logo-grid-7
-                .bank-logo-large
-                  img src="img/bank-logos/bnp.png"
-              .bank-logo-grid-8
-                .bank-logo-small
-                  img src="img/bank-logos/hsbc.png"
-              .bank-logo-grid-9
-                .bank-logo-large
-                  img src="img/bank-logos/credit-du-nord.png"
-              .bank-logo-grid-10
-                .bank-logo-small
-                  img src="img/bank-logos/socgen.png"
+            .bank-logo-grid-1
+              .bank-logo-medium
+                img src="img/bank-logos/credit-foncier.png"
+            .bank-logo-grid-2
+              .bank-logo-large
+                img src="img/bank-logos/bred.png"
+            .bank-logo-grid-3
+              .bank-logo-medium
+                img src="img/bank-logos/bred-espace.png"
+            .bank-logo-grid-4
+              .bank-logo-large
+                img src="img/bank-logos/ca-2.png"
+            .bank-logo-grid-5
+              .bank-logo-medium
+                img src="img/bank-logos/lcl.png"
+            .bank-logo-grid-6
+              .bank-logo-large
+                img src="img/bank-logos/caisse-epargne.png"
+            .bank-logo-grid-7
+              .bank-logo-large
+                img src="img/bank-logos/bnp.png"
+            .bank-logo-grid-8
+              .bank-logo-small
+                img src="img/bank-logos/hsbc.png"
+            .bank-logo-grid-9
+              .bank-logo-large
+                img src="img/bank-logos/credit-du-nord.png"
+            .bank-logo-grid-10
+              .bank-logo-small
+                img src="img/bank-logos/socgen.png"
 
     section.home-testimonie
       .row-center
