--- a/css/scss/home/_home_section_bank_logo.scss
+++ b/css/scss/home/_home_section_bank_logo.scss
@@ -38,111 +38,183 @@ $bank-grid-spacing : 88px;
 
 .home-bank-logo-illustration {
   position: relative;
-  max-width: 1024px;
-  height: 340px;
+  width: 100%;
+  max-width: 420px;
   margin: auto;
 
-  background-image: url(../img/bank-logo-bg.png);
-  background-position: center;
-  background-repeat: no-repeat;
-}
+  @media screen and (max-width: $mq-tablet) {
+    margin-top: $base-spacing*2;
+  }
 
-.home-bank-logo-illustration-container {
-  position: absolute;
-  width: 100%;
-  bottom: -44px;
-  z-index: 2;
+  @media screen and (min-width: $mq-tablet) {
+    max-width: 1024px;
+    height: 340px;
+    background-image: url(../img/bank-logo-bg.png);
+    background-position: center;
+    background-repeat: no-repeat;
+  }
 }
 
 .p-app-container {
   position: absolute;
-  width: 128px;
-  height: 128px;
-  left: calc(50% - 64px);
-  top: calc(50% - 64px);
+  width: 80px;
+  height: 80px;
+  left: calc(50% - 40px);
+  top: 35%;
+
+  @media screen and (min-width: $mq-tablet) {
+    width: 128px;
+    height: 128px;
+    left: calc(50% - 64px);
+    top: calc(50% - 64px);
+  }
 }
 
 .p-app-logo {
   display: block;
-  width: 128px;
-  height: 128px;
-  background-image: linear-gradient(200deg, #35AE77 37%, #45E59C 120%);
+  width: 80px;
+  height: 80px;
+  background-image: linear-gradient(200deg, $primary-1 37%, #45E59C 120%);
   box-shadow: 0 0 25px 0 rgba($neutral-1,0.20);
-  border-radius: $base-spacing*2;
+  border-radius: $base-spacing;
 
   color: #FFF;
-  font-size: 48px;
+  font-size: 32px;
+  line-height: 80px;
   text-align: center;
-  line-height: 128px;
-  //text-shadow: 0 2px 10px 0 rgba($primary-1,0.50);
+
+  @media screen and (min-width: $mq-tablet) {
+    width: 128px;
+    height: 128px;
+    border-radius: $base-spacing*2;
+    font-size: 48px;
+    text-align: center;
+    line-height: 128px;
+  }
 }
 
 .p-app-power {
   position: absolute;
-  top: -25px;
-  left: calc(50% - 25px);
-  width: 50px;
-  height: 50px;
-  padding: 8px;
-  border-radius: 50px;
+
+  top: -17px;
+  left: calc(50% - 17px);
+  width: 34px;
+  height: 34px;
+  padding: 5px;
+  border-radius: 34px;
   background-color: rgba(#FFF, 0.3);
 
   animation: power-bounce 2s linear infinite;
+
+  @media screen and (min-width: $mq-tablet) {
+    top: -25px;
+    left: calc(50% - 25px);
+    width: 50px;
+    height: 50px;
+    padding: 8px;
+  }
 }
 
 .p-app-power-thunder {
-  width: 34px;
-  height: 34px;
+  width: 100%;
+  height: 100%;
   border-radius: 50px;
   background-color: #FFF;
 
   background-image: url(../img/icon-thunder.svg);
   background-position: center;
   background-repeat: no-repeat;
-  background-size: 16px;
-  box-shadow: 0 0 20px rgba($neutral-1, 0.1);
+  background-size: 10px;
+  box-shadow: 0 0 25px rgba($neutral-1, 0.1);
+
+  @media screen and (min-width: $mq-tablet) {
+    background-size: 16px;
+  }
+}
+
+.home-bank-logo-illustration-container {
+  position: relative;
+  width: 100%;
+  bottom: -20px;
+  z-index: 2;
+
+  @media screen and (max-width: $mq-tablet) {
+    height: 370px;
+  }
+
+  @media screen and (min-width: $mq-tablet) {
+    position: absolute;
+    bottom: -44px;
+    height: $bank-grid-spacing*3;
+  }
 }
 
 %bank-logo-grid {
   position: absolute;
-  flex: 0 0 88px;
-  width: 88px;
-  height: 88px;
+  width: 60px;
+  height: 60px;
+
+  @media screen and (min-width: $mq-tablet) {
+    width: 88px;
+    height: 88px;
+  }
 }
 
 %bank-logo {
   display: block;
   position: absolute;
   overflow: hidden;
-  width: 80px;
-  height: 80px;
-  top: 4px;
-  left: 4px;
+  width: 60px;
+  height: 60px;
+
   border-radius: 100px;
   box-shadow: 0 2px 20px 0 rgba($neutral-1,0.20);
-  transition: all 0.1s linear;
 
   img {
     width: 100%;
   }
+
+  @media screen and (min-width: $mq-tablet) {
+      width: 80px;
+      height: 80px;
+      top: 4px;
+      left: 4px;
+  }
 }
 
-.bank-logo-row {
-  position: relative;
-  height: 88px;
+.bank-logo-small {
+  @extend %bank-logo;
+}
+
+.bank-logo-medium {
+  @extend %bank-logo;
+
+  @media screen and (min-width: $mq-tablet) {
+    width: 88px;
+    height: 88px;
+    top: 0;
+    left: 0;
+  }
+}
+
+.bank-logo-large {
+  @extend %bank-logo;
+
+  @media screen and (min-width: $mq-tablet) {
+    width: 104px;
+    height: 104px;
+    top: -8px;
+    left: -8px;
+  }
 }
 
 .bank-logo-grid-1 {
   @extend %bank-logo-grid;
-  left: $bank-grid-spacing;
-
   animation: logo-animate-1 2.8s linear infinite;
 }
 
 .bank-logo-grid-2 {
   @extend %bank-logo-grid;
-  right: $bank-grid-spacing;
-
   animation: logo-animate-2 3.2s linear infinite;
 }
 
@@ -153,64 +225,143 @@ $bank-grid-spacing : 88px;
 
 .bank-logo-grid-4 {
   @extend %bank-logo-grid;
-  left: $bank-grid-spacing*2;
   animation: logo-animate-2 4s linear infinite;
 }
 
 .bank-logo-grid-5 {
   @extend %bank-logo-grid;
-  right: $bank-grid-spacing*2;
   animation: logo-animate-3 3.2s linear infinite;
 }
 
 .bank-logo-grid-6 {
   @extend %bank-logo-grid;
-  right: 0;
   animation: logo-animate-6 2.8s linear infinite;
 }
 
 .bank-logo-grid-7 {
   @extend %bank-logo-grid;
-  left: $bank-grid-spacing;
   animation: logo-animate-1 2.8s linear infinite;
 }
 
 .bank-logo-grid-8 {
   @extend %bank-logo-grid;
-  left: $bank-grid-spacing*3;
   animation: logo-animate-5 3.6s linear infinite;
 }
 
 .bank-logo-grid-9 {
   @extend %bank-logo-grid;
-  right: $bank-grid-spacing*3;
   animation: logo-animate-3 3.4s linear infinite;
 }
 
 .bank-logo-grid-10 {
   @extend %bank-logo-grid;
-  right: $bank-grid-spacing;
   animation: logo-animate-5 3.2s linear infinite;
 }
 
-.bank-logo-small {
-  @extend %bank-logo;
+@media screen and (max-width: $mq-tablet) {
+
+  .bank-logo-grid-1 {
+    top: 0;
+    left: 54px;
+  }
+
+  .bank-logo-grid-2 {
+    top: 0;
+    right: 54px;
+  }
+
+  .bank-logo-grid-3 {
+    top: 54px;
+    left: 0;
+  }
+
+  .bank-logo-grid-4 {
+    top: 54px;
+    right: 0;
+  }
+
+  .bank-logo-grid-5 {
+    top: 182px;
+    left: 0;
+  }
+
+  .bank-logo-grid-6 {
+    top: 182px;
+    right: 0;
+  }
+
+  .bank-logo-grid-7 {
+    top: 240px;
+    left: 70px;
+  }
+
+  .bank-logo-grid-8 {
+    top: 240px;
+    right: 70px;
+  }
+
+  .bank-logo-grid-9 {
+    top: 295px;
+    left: 10px;
+  }
+
+  .bank-logo-grid-10 {
+    top: 295px;
+    right: 10px;
+  }
 }
 
-.bank-logo-medium {
-  @extend %bank-logo;
-  width: 88px;
-  height: 88px;
-  top: 0;
-  left: 0;
-}
+@media screen and (min-width: $mq-tablet) {
 
-.bank-logo-large {
-  @extend %bank-logo;
-  width: 104px;
-  height: 104px;
-  top: -8px;
-  left: -8px;
+  .bank-logo-grid-1 {
+    top: 0;
+    left: $bank-grid-spacing;
+  }
+
+  .bank-logo-grid-2 {
+    top: 0;
+    right: $bank-grid-spacing;
+  }
+
+  .bank-logo-grid-3 {
+    top: $bank-grid-spacing;
+    left: 0;
+  }
+
+  .bank-logo-grid-4 {
+    top: $bank-grid-spacing;
+    left: $bank-grid-spacing*2;
+  }
+
+  .bank-logo-grid-5 {
+    top: $bank-grid-spacing;
+    right: $bank-grid-spacing*2;
+  }
+
+  .bank-logo-grid-6 {
+    top: $bank-grid-spacing;
+    right: 0;
+  }
+
+  .bank-logo-grid-7 {
+    top: $bank-grid-spacing*2;
+    left: $bank-grid-spacing;
+  }
+
+  .bank-logo-grid-8 {
+    top: $bank-grid-spacing*2;
+    left: $bank-grid-spacing*3;
+  }
+
+  .bank-logo-grid-9 {
+    top: $bank-grid-spacing*2;
+    right: $bank-grid-spacing*3;
+  }
+
+  .bank-logo-grid-10 {
+    top: $bank-grid-spacing*2;
+    right: $bank-grid-spacing;
+  }
 }
 
 @keyframes logo-animate-1 {
@@ -244,7 +395,7 @@ $bank-grid-spacing : 88px;
 }
 
 @keyframes power-bounce {
-  0% { transform: scale(1.0)}
-  50%   { transform: scale(1.2) }
-  100%   { transform: scale(1.0) }
+  0%   { transform: scale(1.0) }
+  50%  { transform: scale(1.2) }
+  100% { transform: scale(1.0) }
 }
