--- a/css/scss/template/_template_cta_footer.scss
+++ b/css/scss/template/_template_cta_footer.scss
@@ -42,6 +42,8 @@
 
 .cta-footer-button {
   flex: 0 0 100%;
+  max-width: 350px;
+  margin: auto;
 
   @media screen and (min-width: $mq-medium) {
     flex: 0 0 30%;
