--- a/slim/home.slim
+++ b/slim/home.slim
@@ -4,9 +4,12 @@ html
   head
     link href="https://fonts.googleapis.com/css?family=Work+Sans:500,600,700" rel="stylesheet"
     link rel="stylesheet" type="text/css" href="css/theme.css" media="screen"
+    script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"
+    script src="/lib/jquery.bxslider.min.js"
+    link href="/lib/jquery.bxslider.css" rel="stylesheet"
+    script src="js/slider-min.js"
 
     meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
-
   body
     include template/_header
 
@@ -193,17 +196,110 @@ html
           h2.heading-medium.text-primary.text-center.home-testimonie-heading
             | Nos clients témoignent
 
-        .home-testimonie-container
-
-          //testimonie card
-          .home-testimonie-container-card
+        ul.home-testimonie-container
+          li.home-testimonie-container-card
             .home-testimonie-card.card-shadow
               .home-testimonie-card-quote
                 span.icon-wp-quote
 
               .home-testimonie-card-content
                 p
-                  | Julien a été excellent et nous a obtenu un taux magique.
+                  | 0 - Julien a été excellent et nous a obtenu un taux magique.
+                    Bravo Pretto !
+
+                .home-testimonie-card-content-note
+                  span.icon-trustpilot-star.icon-wp-star
+                  span.icon-trustpilot-star.icon-wp-star
+                  span.icon-trustpilot-star.icon-wp-star
+                  span.icon-trustpilot-star.icon-wp-star
+                  span.icon-trustpilot-star.icon-wp-star
+
+                .home-testimonie-card-content-name
+                  strong Odile Deraye, Meudon
+          li.home-testimonie-container-card
+            .home-testimonie-card.card-shadow
+              .home-testimonie-card-quote
+                span.icon-wp-quote
+
+              .home-testimonie-card-content
+                p
+                  | 1 - Julien a été excellent et nous a obtenu un taux magique.
+                    Bravo Pretto !
+
+                .home-testimonie-card-content-note
+                  span.icon-trustpilot-star.icon-wp-star
+                  span.icon-trustpilot-star.icon-wp-star
+                  span.icon-trustpilot-star.icon-wp-star
+                  span.icon-trustpilot-star.icon-wp-star
+                  span.icon-trustpilot-star.icon-wp-star
+
+                .home-testimonie-card-content-name
+                  strong Odile Deraye, Meudon
+          li.home-testimonie-container-card
+            .home-testimonie-card.card-shadow
+              .home-testimonie-card-quote
+                span.icon-wp-quote
+
+              .home-testimonie-card-content
+                p
+                  | 2 - Julien a été excellent et nous a obtenu un taux magique.
+                    Bravo Pretto !
+
+                .home-testimonie-card-content-note
+                  span.icon-trustpilot-star.icon-wp-star
+                  span.icon-trustpilot-star.icon-wp-star
+                  span.icon-trustpilot-star.icon-wp-star
+                  span.icon-trustpilot-star.icon-wp-star
+                  span.icon-trustpilot-star.icon-wp-star
+
+                .home-testimonie-card-content-name
+                  strong Odile Deraye, Meudon
+          li.home-testimonie-container-card
+            .home-testimonie-card.card-shadow
+              .home-testimonie-card-quote
+                span.icon-wp-quote
+
+              .home-testimonie-card-content
+                p
+                  | 3 - Julien a été excellent et nous a obtenu un taux magique.
+                    Bravo Pretto !
+
+                .home-testimonie-card-content-note
+                  span.icon-trustpilot-star.icon-wp-star
+                  span.icon-trustpilot-star.icon-wp-star
+                  span.icon-trustpilot-star.icon-wp-star
+                  span.icon-trustpilot-star.icon-wp-star
+                  span.icon-trustpilot-star.icon-wp-star
+
+                .home-testimonie-card-content-name
+                  strong Odile Deraye, Meudon
+          li.home-testimonie-container-card
+            .home-testimonie-card.card-shadow
+              .home-testimonie-card-quote
+                span.icon-wp-quote
+
+              .home-testimonie-card-content
+                p
+                  | 4 - Julien a été excellent et nous a obtenu un taux magique.
+                    Bravo Pretto !
+
+                .home-testimonie-card-content-note
+                  span.icon-trustpilot-star.icon-wp-star
+                  span.icon-trustpilot-star.icon-wp-star
+                  span.icon-trustpilot-star.icon-wp-star
+                  span.icon-trustpilot-star.icon-wp-star
+                  span.icon-trustpilot-star.icon-wp-star
+
+                .home-testimonie-card-content-name
+                  strong Odile Deraye, Meudon
+          li.home-testimonie-container-card
+            .home-testimonie-card.card-shadow
+              .home-testimonie-card-quote
+                span.icon-wp-quote
+
+              .home-testimonie-card-content
+                p
+                  | 5 - Julien a été excellent et nous a obtenu un taux magique.
                     Bravo Pretto !
 
                 .home-testimonie-card-content-note
