--- a/css/scss/home/_home_section_testimonie.scss
+++ b/css/scss/home/_home_section_testimonie.scss
@@ -1,5 +1,6 @@
 .home-testimonie {
   display: block;
+  overflow: hidden;
   @extend %template-section-padding;
 
   @media screen and (min-width: $mq-tablet) {
@@ -24,7 +25,11 @@
 .home-testimonie-container-card {
   width: 100%;
   padding: 0 $base-spacing*2;
-
+  opacity: .3;
+  transition: opacity 1000ms ease-in-out;
+  &[aria-hidden="false"] {
+    opacity: 1;
+  }
   @media screen and (min-width: $mq-medium) {
     width: 50%;
     padding: 0 $base-spacing*1.5;
