[feat] add second header on scroll

--- a/slim/home.slim
+++ b/slim/home.slim
@@ -8,6 +8,7 @@ html
     script src="/lib/jquery.bxslider.min.js"
     link href="/lib/jquery.bxslider.css" rel="stylesheet"
     script src="js/slider-min.js"
+    script src="js/header-min.js"
 
     meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
   body
