--- a/slim/template/_header.slim
+++ b/slim/template/_header.slim
@@ -1,4 +1,4 @@
-header
+header.primary-header.header-visible
   .row-center.row-padding
     a.header-logo href=""
 
@@ -22,3 +22,4 @@ header
         a.header-menu-item-button-search.icon-wp-search href="#searchbox"
 
     .header-button-menu-mobile
+header.secondary-header
