--- a/css/scss/template/_template_header.scss
+++ b/css/scss/template/_template_header.scss
@@ -1,4 +1,4 @@
-header {
+.primary-header {
   position: relative;
   height: $base-spacing*6;
 
@@ -8,7 +8,19 @@ header {
     padding-bottom: $base-spacing*3;
   }
 }
-
+.secondary-header {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 80px;
+  background: red;
+  z-index: 9999;
+}
+.header-visible {
+  display: block;
+}
 .header-logo {
   display: block;
   width: 70px;
@@ -58,7 +70,6 @@ header {
 
 //menu desktop
 @media screen and (min-width: $mq-medium) {
-
   .header-menu {
     display: block;
     position: absolute;
@@ -122,21 +133,21 @@ header {
     width: $base-spacing*5;
     height: $base-spacing*5;
 
-    color: #FFF;
+    color: #fff;
     text-align: center;
     text-decoration: none;
     line-height: $base-spacing*5;
 
     background-color: $primary-1;
     border-radius: $base-spacing;
-    box-shadow: 0 2px 10px 0 rgba($neutral-1,0.2);
+    box-shadow: 0 2px 10px 0 rgba($neutral-1, 0.2);
 
     transition: all 0.2s ease-out;
 
     &:hover {
       background-color: $primary-1-d;
       transform: scale(1.03);
-      box-shadow: 0 2px 30px 0 rgba($neutral-1,0.4);
+      box-shadow: 0 2px 30px 0 rgba($neutral-1, 0.4);
     }
   }
 }
