--- a/css/theme.css
+++ b/css/theme.css
@@ -82,14 +82,27 @@ p {
     .cta_footer, .home-bank-logo, .home-testimonie, .home-how-it-work {
       padding: 80px 0; } }
 
-header {
+.primary-header {
   position: relative;
   height: 48px; }
   @media screen and (min-width: 840px) {
-    header {
+    .primary-header {
       height: 88px;
       padding-top: 24px;
       padding-bottom: 24px; } }
+
+.secondary-header {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 80px;
+  background: red;
+  z-index: 9999; }
+
+.header-visible {
+  display: block; }
 
 .header-logo {
   display: block;
@@ -171,7 +184,7 @@ header {
     display: block;
     width: 40px;
     height: 40px;
-    color: #FFF;
+    color: #fff;
     text-align: center;
     text-decoration: none;
     line-height: 40px;
