--- a/css/scss/template/_template_cta_footer.scss
+++ b/css/scss/template/_template_cta_footer.scss
@@ -10,6 +10,10 @@
   display: flex;
   align-items: center;
   flex-wrap: wrap;
+
+  @media screen and (min-width: $mq-medium) {
+    flex-wrap: nowrap;
+  }
 }
 
 .cta-footer-title {
