--- a/css/theme.css
+++ b/css/theme.css
@@ -193,6 +193,9 @@ header {
   display: flex;
   align-items: center;
   flex-wrap: wrap; }
+  @media screen and (min-width: 840px) {
+    .cta-footer-container {
+      flex-wrap: nowrap; } }
 
 .cta-footer-title {
   flex: 0 0 100%;
@@ -458,6 +461,164 @@ body {
 
 .text-left {
   text-align: left; }
+
+/** VARIABLES
+===================================*/
+/** RESET AND LAYOUT
+===================================*/
+.bx-wrapper {
+  position: relative;
+  margin-bottom: 60px;
+  padding: 0;
+  *zoom: 1;
+  -ms-touch-action: pan-y;
+  touch-action: pan-y; }
+
+.bx-wrapper img {
+  max-width: 100%;
+  display: block; }
+
+.bxslider {
+  margin: 0;
+  padding: 0; }
+
+ul.bxslider {
+  list-style: none; }
+
+.bx-viewport {
+  /*fix other elements on the page moving (on Chrome)*/
+  -webkit-transform: translatez(0);
+  overflow: initial !important; }
+
+/** THEME
+===================================*/
+.bx-wrapper {
+  margin: auto; }
+
+.bx-wrapper .bx-controls-auto {
+  position: absolute;
+  bottom: -30px;
+  width: 100%; }
+
+/* PAGER */
+.bx-wrapper .bx-pager {
+  position: relative;
+  padding-top: 24px;
+  text-align: center; }
+
+.bx-wrapper .bx-pager.bx-default-pager a {
+  display: block;
+  width: 16px;
+  height: 16px;
+  margin: 0 8px;
+  outline: 0;
+  background: rgba(23, 55, 83, 0.2);
+  text-indent: -9999px;
+  -moz-border-radius: 8px;
+  -webkit-border-radius: 8px;
+  border-radius: 8px; }
+
+.bx-wrapper .bx-pager.bx-default-pager a:hover,
+.bx-wrapper .bx-pager.bx-default-pager a:focus {
+  background: rgba(23, 55, 83, 0.3);
+  transition: all 0.3s linear; }
+
+.bx-wrapper .bx-pager.bx-default-pager a.active {
+  background: #35AE77; }
+
+.bx-wrapper .bx-pager-item,
+.bx-wrapper .bx-controls-auto .bx-controls-auto-item {
+  display: inline-block;
+  vertical-align: bottom;
+  *zoom: 1;
+  *display: inline; }
+
+.bx-wrapper .bx-pager-item {
+  font-size: 0;
+  line-height: 0; }
+
+/* DIRECTION CONTROLS (NEXT / PREV) */
+.bx-wrapper .bx-prev {
+  left: 10px; }
+
+.bx-wrapper .bx-prev:hover,
+.bx-wrapper .bx-prev:focus {
+  background-position: 0 0; }
+
+.bx-wrapper .bx-next {
+  right: 10px; }
+
+.bx-wrapper .bx-next:hover,
+.bx-wrapper .bx-next:focus {
+  background-position: -43px 0; }
+
+.bx-wrapper .bx-controls-direction a {
+  position: absolute;
+  top: 50%;
+  margin-top: -16px;
+  outline: 0;
+  width: 32px;
+  height: 32px;
+  text-indent: -9999px;
+  z-index: 9999; }
+
+.bx-wrapper .bx-controls-direction a.disabled {
+  display: none; }
+
+/* AUTO CONTROLS (START / STOP) */
+.bx-wrapper .bx-controls-auto {
+  text-align: center; }
+
+.bx-wrapper .bx-controls-auto .bx-start {
+  display: block;
+  text-indent: -9999px;
+  width: 10px;
+  height: 11px;
+  outline: 0;
+  margin: 0 3px; }
+
+.bx-wrapper .bx-controls-auto .bx-start:hover,
+.bx-wrapper .bx-controls-auto .bx-start.active,
+.bx-wrapper .bx-controls-auto .bx-start:focus {
+  background-position: -86px 0; }
+
+.bx-wrapper .bx-controls-auto .bx-stop {
+  display: block;
+  text-indent: -9999px;
+  width: 9px;
+  height: 11px;
+  outline: 0;
+  margin: 0 3px; }
+
+.bx-wrapper .bx-controls-auto .bx-stop:hover,
+.bx-wrapper .bx-controls-auto .bx-stop.active,
+.bx-wrapper .bx-controls-auto .bx-stop:focus {
+  background-position: -86px -33px; }
+
+/* PAGER WITH AUTO-CONTROLS HYBRID LAYOUT */
+.bx-wrapper .bx-controls.bx-has-controls-auto.bx-has-pager .bx-pager {
+  text-align: left;
+  width: 80%; }
+
+.bx-wrapper .bx-controls.bx-has-controls-auto.bx-has-pager .bx-controls-auto {
+  right: 0;
+  width: 35px; }
+
+/* IMAGE CAPTIONS */
+.bx-wrapper .bx-caption {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background: #666;
+  background: rgba(80, 80, 80, 0.75);
+  width: 100%; }
+
+.bx-wrapper .bx-caption span {
+  color: #fff;
+  font-family: Arial;
+  display: block;
+  font-size: .85em;
+  padding: 10px; }
 
 .home-hero {
   display: block;
@@ -1150,16 +1311,13 @@ body {
     padding: 0 calc(8% + 16px); } }
 
 .home-testimonie-container-card {
-  width: 100%;
-  padding: 0 16px;
   opacity: .3;
   transition: opacity 1000ms ease-in-out; }
   .home-testimonie-container-card[aria-hidden="false"] {
     opacity: 1; }
-  @media screen and (min-width: 840px) {
+  @media screen and (max-width: 480px) {
     .home-testimonie-container-card {
-      width: 50%;
-      padding: 0 12px; } }
+      padding: 0 16px; } }
 
 .home-testimonie-card {
   display: flex; }
