--- a/css/theme.scss
+++ b/css/theme.scss
@@ -47,5 +47,6 @@ p {
 @import 'scss/icon';
 @import 'scss/slider';
 @import 'scss/text';
+@import 'scss/jquery.bxslider';
 
 @import 'scss/home/home';
