finish html ans CSS

--- a/css/scss/_icon.scss
+++ b/css/scss/_icon.scss
@@ -10,6 +10,9 @@
 .icon-wp-p-logo:before {
   content: "\64";
 }
+.icon-wp-phone:before {
+  content: "\65";
+}
 
 .icon-trustpilot-star {
   display: inline-block;
