--- a/slim/home.slim
+++ b/slim/home.slim
@@ -6,20 +6,19 @@ html
     link rel="stylesheet" type="text/css" href="css/theme.css" media="screen"
     script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"
     script src="/js/jquery.bxslider.min.js"
-    script src="js/slider-min.js"
-    script src="js/header-min.js"
+    script src="/js/slider-min.js"
+    script src="/js/header-min.js"
 
     meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
   body
     include template/_header
-
 
     section.home-hero
       .row-center.row-padding
         h1.heading-large.home-hero-heading.text-center
           | Trouver le meilleur prêt immobilier n’a jamais été aussi simple
         .home-hero-cta
-          a.button-large.button-accent-1 href="http://app.pretto.fr" rel="nofollow"
+          a.button-large.button-accent-1 href="https://app.pretto.fr" rel="nofollow"
             | Simuler mon prêt
 
 
@@ -139,6 +138,7 @@ html
           .home-arguments-decoration-star-4
           .home-arguments-decoration-star-5
           .home-arguments-decoration-star-6
+
 
     section.home-bank-logo
       .home-bank-logo-arrow
