--- a/slim/template/_cta_footer.slim
+++ b/slim/template/_cta_footer.slim
@@ -6,5 +6,5 @@ section.cta_footer
       | en 5 minutes, avec nos experts
     .cta-footer-icon
     .cta-footer-button
-      a.button-large.button-primary href="http://app.pretto.fr" rel="nofollow"
+      a.button-large.button-primary href="https://app.pretto.fr" rel="nofollow"
         | Simuler mon prêt
