--- a/slim/template/_header.slim
+++ b/slim/template/_header.slim
@@ -1,6 +1,6 @@
-header.primary-header.header-visible
+header.primary-header
   .row-center.row-padding
-    a.header-logo href=""
+    a.header-logo href="/"
 
     ul.header-menu
       li.header-menu-item
@@ -22,4 +22,14 @@ header.primary-header.header-visible
         a.header-menu-item-button-search.icon-wp-search href="#searchbox"
 
     .header-button-menu-mobile
-header.secondary-header
+
+.secondary-header
+  .row-center.row-padding
+    a.header-logo href="/"
+    .header-button
+      .header-phone
+        span.header-phone-icon.icon-wp-phone
+        span.header-phone-text 01 76 39 06 41
+      .header-button-cta
+        a.button-medium.button-primary href="https://app.pretto.fr" rel="nofollow"
+          | simuler mon prêt
