--- a/css/scss/_button.scss
+++ b/css/scss/_button.scss
@@ -20,6 +20,11 @@
 
 .button-medium {
   @extend %button;
+
+  height: 48px;
+  padding: 0 48px;
+  line-height: 48px;
+  background-color: $primary-1;
 }
 
 .button-large {
